--- a/bs-config.json
+++ b/bs-config.json
@@ -1,5 +1,10 @@
 {
+  "port": 3001,
+  "injectChanges": false,
+  "files": [ "./**/*.{html,htm,css,js}" ],
+  "watchOptions": { "ignored": "node_modules" },
   "server": {
     "baseDir": ["./src", "./build/contracts"]
   }
 }
+
